# tracer

./: .gitignore  CLAUDE.md  RESEARCH.md  pyproject.toml
tests/: test_adapter.py  test_behavioral.py  test_harness.py  test_injecagent_adapter.py  test_metrics.py  test_splits.py
tracer/: types.py
tracer/agentdojo/: adapter.py
tracer/benchmark/: harness.py  metrics.py  splits.py
tracer/detector/: base.py  behavioral.py
tracer/experiments/: run_baseline.py
tracer/experiments/configs/: base.yaml
tracer/injecagent/: adapter.py
