[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "agentdojo>=0.1.35",
    "anthropic>=0.25",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
